<resources>
    <string name="app_name">Easy Sitp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_publicaciones">Publicaciones</string>
    <string name="menu_contactenos">Contáctenos</string>
    <string name="menu_acercade">Acerca de</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
