<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_publicaciones"
            android:icon="@drawable/ic_menu_publicaciones"
            android:title="@string/menu_publicaciones" />
        <item
            android:id="@+id/nav_contactenos"
            android:icon="@drawable/ic_menu_contactenos"
            android:title="@string/menu_contactenos" />
        <item
            android:id="@+id/nav_acercade"
            android:icon="@drawable/ic_menu_acercade"
            android:title="@string/menu_acercade" />
    </group>

    <item android:title="Cuenta">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout"
                android:onClick="logOut"
                />
        </menu>
    </item>

</menu>
