<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.easysitp.easysitp.ui.Inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio">
        <action
            android:id="@+id/action_nav_inicio_to_nav_acercade"
            app:destination="@id/nav_acercade" />
    </fragment>

    <fragment
        android:id="@+id/nav_publicaciones"
        android:name="com.easysitp.easysitp.ui.publicaciones.PublicacionesFragment"
        android:label="@string/menu_publicaciones"
        tools:layout="@layout/fragment_publicaciones" />

    <fragment
        android:id="@+id/nav_contactenos"
        android:name="com.easysitp.easysitp.ui.contactenos.ContactenosFragment"
        android:label="@string/menu_contactenos"
        tools:layout="@layout/fragment_contactenos" />

    <fragment
        android:id="@+id/nav_acercade"
        android:name="com.easysitp.easysitp.ui.acercade.AcercadeFragment"
        android:label="@string/menu_acercade"
        tools:layout="@layout/fragment_acercade" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.easysitp.easysitp.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>